kube/jupyterhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  namespace: jupyterhub
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - host: jupyterhub.tithia.scio.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-public
            port:
              number: 80
  tls:
  - hosts:
    - jupyterhub.tithia.scio.services
    secretName: jupyterhub-tithia-scio-services-tls
